# taurus

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  makefile  rustfmt.toml
data/database/: actors.over
data/game/: actors.over  colors.over  dungeon_profiles.over  dungeons.over  main.over  materials.over  name_profiles.over  objects.over  player.over  settings.over  tiles.over
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
org/: manual.org  races.org
src/: actor.rs  console.rs  constants.rs  coord.rs  data.rs  database.rs  defs.rs  dungeon.rs  error.rs  game.rs  game_data.rs  generate.rs  item.rs  lang.rs  language.rs  lib.rs  main.rs  material.rs  name_gen.rs  object.rs  org.rs  player.rs  tile.rs  ui.rs  util.rs  utility.rs
src/constants/: colors.rs  mod.rs
src/generate/: mod.rs  room.rs  util.rs
src/tests/: actor.rs  mod.rs
src/tests/common/: mod.rs
src/util/: convert.rs  direction.rs  file.rs  math.rs  mod.rs  rand.rs  rectangle.rs  string.rs
src/utility/: language.rs  mod.rs
tests/: test_org.rs  test_taurus.rs
tests/common/: mod.rs
tests/files/: test1.org
